fix colors and gaps

--- a/src/styles/themes/pgov.css
+++ b/src/styles/themes/pgov.css
@@ -259,19 +259,19 @@
   --checkbox-description-font-size: calc(var(--font-abstraction-open-sans-body-sm) * 1px);
   --checkbox-description-color: var(--color-foundation-black);
   --checkbox-description-margin-bottom: calc(var(--spacing-xs) * 1px);
-  --checkbox-options-gap: calc(var(--spacing-sm) * 1px);
+  --checkbox-options-gap: calc(var(--spacing-xs) * 1px);
   --checkbox-background: var(--color-foundation-white);
   --checkbox-label-font-family: var(--font-family-open-sans);
   --checkbox-label-font-size: calc(var(--font-abstraction-open-sans-body-sm) * 1px);
   --checkbox-label-font-weight: 400;
   --checkbox-label-color: var(--color-foundation-black);
   --checkbox-label-line-height: 1.5;
-  --checkbox-label-margin-top: calc(var(--spacing-sm) * 1px);
+  --checkbox-label-margin-top: 0;
   --checkbox-label-padding-left: calc(var(--spacing-xl) * 1px);
   --checkbox-input-background: var(--color-foundation-white);
   --checkbox-input-border-width: 2px;
   --checkbox-input-border-color: var(--color-foundation-black);
-  --checkbox-input-border-radius: calc(var(--spacing-2xs) * 1px);
+  --checkbox-input-border-radius: calc(var(--spacing-3xs) * 1px);
   --checkbox-input-size: calc(var(--spacing-lg) * 1px);
   --checkbox-input-margin-left: 2px;
   --checkbox-input-margin-top: 0.064rem;
@@ -296,7 +296,7 @@
   --checkbox-tile-border-color: var(--color-base-lighter);
   --checkbox-tile-border-radius: calc(var(--spacing-2xs) * 1px);
   --checkbox-tile-text-color: var(--color-foundation-black);
-  --checkbox-tile-margin-top: calc(var(--spacing-xs) * 1px);
+  --checkbox-tile-margin-top: 0;
   --checkbox-tile-padding: calc(var(--spacing-sm) * 1px) calc(var(--spacing-md) * 1px) calc(var(--spacing-sm) * 1px) calc(var(--spacing-2xl) * 1px);
   --checkbox-tile-checked-background: var(--color-primary-lighter);
   --checkbox-tile-checked-border-color: var(--color-primary-medium);
@@ -857,7 +857,7 @@
   --radio-button-title-font-weight: 700;
   --radio-button-title-font-size: calc(var(--font-abstraction-open-sans-body-sm) * 1px);
   --radio-button-title-line-height: "normal";
-  --radio-button-options-gap: 16px;
+  --radio-button-options-gap: 8px;
   --radio-button-label-gap: 8px;
   --radio-button-color: var(--color-foundation-black);
   --radio-button-border-color: var(--color-base-darkest);
